--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/LuckyWinty/dragDemo#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "accepts": "^1.3.3",
+    "engine.io-parser": "^1.3.1",
+    "gulp": "^3.9.1",
+    "react-addons": "^0.9.1-deprecated",
+    "react-dom": "^15.4.0",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "ws": "^1.1.1"
   }
 }
